# python-project-50

./: Makefile  README.md  pyproject.toml
.github/workflows/: test.yml
gendiff/: __init__.py  build_diff.py  build_tree.py  cli.py  get_state.py  parsers.py
gendiff/formatters/: json.py  main.py  plain.py  stylish.py
gendiff/scripts/: build_diff.py  gendiff.py  generate_diff.py  get_state.py  parsers.py
gendiff/scripts/formatters/: json.py  main.py  plain.py  stylish.py
test/: test_gendiff.py
test/fixtures/: result_json.txt
